--- a/.github/pr-badge.yml
+++ b/.github/pr-badge.yml
@@ -2,5 +2,5 @@
   message: "$issuePrefix"
   icon: "jira"
   color: "green"
-  url: "https://jira.company.com/browse/$issuePrefix"
+  url: "https://tribe-forus.atlassian.net/browse/$issuePrefix"
   when: "$issuePrefix"
