[TRIBE-60] chore: requirements.txt 자동 생성하도록 한 번 수정

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,9 @@
         "source.organizeImports": "always"
     },
   },
-  "isort.args":["--profile", "black"],
+  "isort.args": [
+    "--profile",
+    "black"
+  ],
+  "discord.enabled": true,
 }
