--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ pydantic_core==2.20.1
 PyJWT==2.9.0
 pyparsing==3.1.4
 python-dotenv==1.0.1
+python-multipart==0.0.10
 requests==2.32.3
 requests-oauthlib==2.0.0
 rsa==4.9
