[TRIBE-70] chore: 사용하지 않는 import 자동 제거하도록 추가

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,8 @@
     "editor.defaultFormatter": "ms-python.black-formatter",
     "editor.formatOnSave": true,
     "editor.codeActionsOnSave": {
-        "source.organizeImports": "always"
+        "source.organizeImports": "always",
+        "source.unusedImports": "always"
     },
   },
   "isort.args": [
